# apple-news-intelligence-platform

./: .env.example  .gitignore  Makefile  README.md  architecture.md  pyproject.toml  requirements.txt
airflow/dags/: apple_news_pipeline.py
backend/: Dockerfile  main.py
backend/routes/: graph.py  news.py  search.py  social.py  trends.py
backend/services/: repository.py
data/sample/: articles_sample.json  products_topics_sample.json  publishers_sample.json  social_posts_sample.json
dbt/: dbt_project.yml  profiles.example.yml
dbt/models/: sources.yml
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
infra/: docker-compose.yml  prometheus.yml
scripts/: generate_architecture_brief_pdf.py  generate_outputs.py  init_neo4j.py  init_qdrant.py  run_pipeline_once.py  seed_sample_data.py  windows_admin_setup.ps1
src/: __init__.py  config.py  schemas.py
src/analytics/: __init__.py  gold_builder.py
src/graph/: __init__.py  build_article_graph.py  build_social_graph.py  cypher_constraints.py  neo4j_client.py  sample_queries.cypher
src/ingestion/: gdelt_client.py  google_news_rss_client.py  newsapi_client.py  producer.py  reddit_client.py  rss_client.py  scraper_client.py  twitter_client.py
src/processing/: __init__.py  clean_articles.py  clean_social_posts.py  data_quality.py  deduplicate.py  entity_extraction.py  pandera_schemas.py  sentiment.py  topic_modeling.py  (+1 more)
tests/: conftest.py  test_api.py  test_deduplication.py  test_ingestion.py  test_neo4j_graph.py  test_processing.py  test_vector_search.py
(+25 files in other folders)
